--- a/web/frontend/components/productMapping/style.css
+++ b/web/frontend/components/productMapping/style.css
@@ -11,7 +11,7 @@
 
 .product-map-filters {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     width: 100%;
 }
 
