--- a/web/frontend/components/configuration/style.css
+++ b/web/frontend/components/configuration/style.css
@@ -16,7 +16,7 @@
 
 .progress {
     width: 50%;
-    background-color: #ff6900;
+    background-color: #ff6900 !important;
     display: flex;
     align-items: center;
     justify-content: center;
