--- a/web/frontend/components/configuration/style.css
+++ b/web/frontend/components/configuration/style.css
@@ -5,16 +5,16 @@
     flex-direction: column;
 }
 
-.progress-bar {
-    margin: 10px 10px;
+.banner-progress-bar {
+    padding: 19px 4px;
     height: 20px;
-    background-color: #eaebeb;
+    background-color: #ffffff;
     border-radius: 4px;
     overflow: hidden;
     color: white;
 }
 
-.progress {
+.custom-progress {
     width: 50%;
     background-color: #ff6900 !important;
     display: flex;
@@ -23,7 +23,9 @@
     color: white;
     font-size: 12px;
     font-weight: 500;
-    height: 100%;
+    height: 18px;
+    text-align: center;
+    border-radius: 100px;
 }
 .top-nav-bar {
     display: flex;
