--- a/web/frontend/components/merchantBillingDetails/style.css
+++ b/web/frontend/components/merchantBillingDetails/style.css
@@ -24,7 +24,7 @@
 
 .input-lebel1 {
     font-size: 16px;
-    font-weight: 400;
+    /* font-weight: 400; */
     width: 100%;
     display: flex;
     justify-content: flex-start;
