--- a/web/frontend/components/pickupLocations/style.css
+++ b/web/frontend/components/pickupLocations/style.css
@@ -32,6 +32,7 @@
     width: 100%;
     margin-top: 20px;
     font-size: 14px;
+    overflow-x: auto;
 }
 .pickup-locations-table table{
     width: 100%;
