audit sheet fixes

--- a/web/frontend/App.scss
+++ b/web/frontend/App.scss
@@ -419,3 +419,15 @@ padding: 4px;
     // box-shadow: 0px 0px 5px 0px #ff6900;
   }
 }
+
+.h-100vh{
+  height: 100vh;
+}
+
+
+.sandbox-tooltip{
+  
+    left: unset !important;
+   bottom: unset
+   
+}
