--- a/web/frontend/components/merchantBillingDetails/style.css
+++ b/web/frontend/components/merchantBillingDetails/style.css
@@ -1,7 +1,7 @@
 .merchant-main {
     background-color: white;
     padding: 20px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .merchant-heading1 {
