--- a/web/frontend/App.scss
+++ b/web/frontend/App.scss
@@ -431,3 +431,11 @@ padding: 4px;
    bottom: unset
    
 }
+
+
+.border-grey{
+  border: 1px solid rgb(180, 177, 177);
+  border-radius: 8px;
+}
+
+ 
