--- a/web/frontend/components/newOrders/style.scss
+++ b/web/frontend/components/newOrders/style.scss
@@ -4,13 +4,14 @@
 }
 
 .orders-filters {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 19% 19% 19% 19% 11% 8%;
+    gap: 12px;
+    margin-top: 5px;
 }
 
 .orders-filters .input-container {
-    width: 20%;
+    width: 100%;
 }
 
 .orders-filters .filter-buttons {
