--- a/web/frontend/components/productMapping/style.scss
+++ b/web/frontend/components/productMapping/style.scss
@@ -368,6 +368,7 @@ table {
             }
         }
         transform: translate(0px,0px) !important;
+        inset:  auto 0 auto 0 !important;
         // inset: ;
     }
 }
